--- a/css/index.css
+++ b/css/index.css
@@ -13,3 +13,11 @@ body {
   width: 200px;
   height: 200px;
 }
+
+#classification_board{
+    background: #CE0909;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    width:100%;
+}
